fix alignment issue in action section

--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,8 @@ button:hover {
     justify-content: space-between;
     align-items: center;
     margin:  0 auto;
-    gap: 200px;
-    width: 85%;
+    gap: 150px;
+    width: 80%;
 }
 
 .action-title{
@@ -148,7 +148,7 @@ button:hover {
 .action-section img {
     height: 300px;
     border-radius: 50px;
-    margin-right: 100px;
+    margin-right: 50px;
     margin-left: 50px;
 }
 
